--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
+# Python
+.venv/
+__pycache__/
+*.pyc
+
+# Node.js build output and dependencies
+node_modules/
+dist/
+
 # Environment variables
 .env
 
-# Python virtual environment
-.venv/
-venv/
-
-# Python cache
-__pycache__/
-
-# IDE files
+# IDE and OS files
 .idea/
+.vscode/
+.DS_Store
